# data-mining-visualization

./: .gitignore  Agent.md  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/api/: routes.py
backend/core/: algorithms.py  datasets.py  evaluation.py  frame_algorithms.py
backend/scripts/: download_datasets.py
frontend/: index.html  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: AlgorithmChart.vue  DatasetPanel.vue  InteractiveCanvas.vue  MetricsPanel.vue
frontend/src/services/: api.js  catalog.js
frontend/src/styles/: global.css
frontend/src/views/: AlgorithmView.vue  HomeView.vue
