[project]
name = "data-mining-visualization-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "numpy==2.2.1",
  "pandas==2.2.3",
  "scikit-learn==1.6.0",
]

[project.scripts]
main = "main:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
packages = ["api", "core"]
